After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757199 - Crash when quitting due to the ViewModel outliving the Embed
Crash when quitting due to the ViewModel outliving the Embed
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.16.x
Other All
: Normal critical
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-10-27 18:02 UTC by Pacho Ramos
Modified: 2015-10-29 18:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
view-model: Don't keep it alive just for the timeout (1.43 KB, patch)
2015-10-29 01:42 UTC, Debarshi Ray
committed Details | Review
embed: Fix the lifetime of the signal handlers (3.75 KB, patch)
2015-10-29 01:42 UTC, Debarshi Ray
committed Details | Review
view-container: Fix the lifetime of the signal handlers (1.53 KB, patch)
2015-10-29 01:43 UTC, Debarshi Ray
committed Details | Review

Description Pacho Ramos 2015-10-27 18:02:32 UTC
Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `gnome-photos'.
Program terminated with signal SIGSEGV, Segmentation fault.

Thread 1 (Thread 0x7f0cf580c940 (LWP 8340))

  • #0 photos_mode_controller_get_window_mode
    at photos-mode-controller.c line 171
  • #1 photos_embed_row_changed
    at photos-embed.c line 449
  • #2 g_closure_invoke
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gobject/gclosure.c line 768
  • #3 signal_emit_unlocked_R
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gobject/gsignal.c line 3549
  • #4 g_signal_emit_valist
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gobject/gsignal.c line 3305
  • #5 g_signal_emit
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gobject/gsignal.c line 3361
  • #6 gtk_tree_model_row_inserted
    at /var/tmp/portage/x11-libs/gtk+-3.16.7/work/gtk+-3.16.7/gtk/gtktreemodel.c line 1852
  • #7 gtk_list_store_insert
    at /var/tmp/portage/x11-libs/gtk+-3.16.7/work/gtk+-3.16.7/gtk/gtkliststore.c line 1282
  • #8 gtk_list_store_append
    at /var/tmp/portage/x11-libs/gtk+-3.16.7/work/gtk+-3.16.7/gtk/gtkliststore.c line 1395
  • #9 photos_view_model_add_item
    at photos-view-model.c line 141
  • #10 photos_view_model_object_added
    at photos-view-model.c line 320
  • #11 g_closure_invoke
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gobject/gclosure.c line 768
  • #12 signal_emit_unlocked_R
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gobject/gsignal.c line 3549
  • #13 g_signal_emit_valist
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gobject/gsignal.c line 3305
  • #14 g_signal_emit
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gobject/gsignal.c line 3361
  • #15 photos_item_manager_add_item
    at photos-item-manager.c line 481
  • #16 photos_item_manager_item_created_executed
    at photos-item-manager.c line 106
  • #17 photos_single_item_job_emit_callback
    at photos-single-item-job.c line 63
  • #18 photos_single_item_job_cursor_next
    at photos-single-item-job.c line 90
  • #19 g_simple_async_result_complete
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gio/gsimpleasyncresult.c line 763
  • #20 complete_in_idle_cb_for_thread
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gio/gsimpleasyncresult.c line 832
  • #21 g_main_dispatch
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c line 3122
  • #22 g_main_context_dispatch
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c line 3737
  • #23 g_main_context_iterate
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c line 3808
  • #24 g_main_context_iteration
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c line 3869
  • #25 g_application_run
    at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/gio/gapplication.c line 2328
  • #26 main
    at photos-main.c line 60

Comment 1 Debarshi Ray 2015-10-27 18:12:27 UTC
Did this crash when quitting the application?
Comment 2 Pacho Ramos 2015-10-27 19:14:29 UTC
Yeah, but, before that, I was scrolling down on a directory with a lot of images, it was trying to load them but I closed it before and, just after that, the crash was noticed
Comment 3 Debarshi Ray 2015-10-28 18:56:37 UTC
(In reply to Pacho Ramos from comment #2)
> Yeah, but, before that, I was scrolling down on a directory with a lot of
> images, it was trying to load them but I closed it before and, just after
> that, the crash was noticed

That is what I expected, and I know what is going on. Thanks.
Comment 4 Debarshi Ray 2015-10-29 01:42:24 UTC
Created attachment 314359 [details] [review]
view-model: Don't keep it alive just for the timeout
Comment 5 Debarshi Ray 2015-10-29 01:42:55 UTC
Created attachment 314360 [details] [review]
embed: Fix the lifetime of the signal handlers
Comment 6 Debarshi Ray 2015-10-29 01:43:28 UTC
Created attachment 314361 [details] [review]
view-container: Fix the lifetime of the signal handlers
Comment 7 Debarshi Ray 2015-10-29 01:55:03 UTC
Pushed to master, gnome-3-18 and gnome-3-16.
Comment 8 Pacho Ramos 2015-10-29 18:49:28 UTC
Thanks for the fast fix!